fix horizontal scroll isssue

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -2,6 +2,10 @@
 // v2.0 | 20110126
 // License: none (public domain) */
 
+html {
+  overflow-x: hidden;
+}
+
 html,
 body,
 div,
@@ -107,6 +111,7 @@ section {
 body {
   line-height: 1;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 ol,
